Remove hourly action cap setting
